[gd_scene load_steps=4 format=3 uid="uid://q2uuguncmxep"]

[ext_resource type="Script" uid="uid://h6udl17fmn81" path="res://Entities/Attack/attack.gd" id="1_safge"]
[ext_resource type="Texture2D" uid="uid://dhckpgjwbpxwa" path="res://Assets/Testing/Attack.png" id="2_16m47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16m47"]
size = Vector2(520, 320)

[node name="Attack" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_safge")

[node name="AttackHitbox" type="CollisionShape2D" parent="."]
position = Vector2(560, 0)
shape = SubResource("RectangleShape2D_16m47")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(380, 0)
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("2_16m47")

[node name="ConnectParticles" type="CPUParticles2D" parent="."]
position = Vector2(796, 1)
rotation = 1.5708
scale = Vector2(10.9129, 3.75339)
emitting = false
amount = 5
lifetime = 0.19
one_shot = true
explosiveness = 0.85
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 15.22
gravity = Vector2(0, 300)
initial_velocity_min = 181.82
initial_velocity_max = 252.53
linear_accel_min = 100.0
linear_accel_max = 500.0
scale_amount_min = 32.0
scale_amount_max = 32.0

[node name="ConnectParticles2" type="CPUParticles2D" parent="."]
position = Vector2(796, 1)
rotation = 1.5708
scale = Vector2(10.9129, 3.75339)
emitting = false
amount = 5
lifetime = 0.19
one_shot = true
explosiveness = 0.85
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 15.22
direction = Vector2(-1, 0)
gravity = Vector2(0, 300)
initial_velocity_min = 181.82
initial_velocity_max = 252.53
linear_accel_min = 100.0
linear_accel_max = 500.0
scale_amount_min = 32.0
scale_amount_max = 32.0
